[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "commit-sage"
version = "1.0.0"
description = "AI-powered Git commit message generator using Conventional Commits"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
]

[project.scripts]
commit-sage = "commit_sage:main"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-mock>=3",
]
